// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip rendering renders expected elements 1`] = `
<div
  className="Tooltip Tooltip--left TestClass"
  id="test"
  style={
    Object {
      "left": "5px",
      "top": "10px",
    }
  }
>
  <div
    className="Tooltip__body"
  >
    Test
  </div>
  <div
    className="Tooltip__arrow"
    style={
      Object {
        "left": "15px",
        "top": "20px",
      }
    }
  />
</div>
`;

exports[`Tooltip rendering renders expected elements when className is not set 1`] = `
<div
  className="Tooltip Tooltip--left"
  id="test"
  style={
    Object {
      "left": "5px",
      "top": "10px",
    }
  }
>
  <div
    className="Tooltip__body"
  >
    Test
  </div>
  <div
    className="Tooltip__arrow"
    style={
      Object {
        "left": "15px",
        "top": "20px",
      }
    }
  />
</div>
`;
